<resources>
    <string name="app_name">Mis deudores</string>

    <string name="register">Registro</string>
    <string name="registro">REGISTRO</string>
    <string name="nombre">Nombre</string>
    <string name="correo">E-mail</string>
    <string name="Telefono">Telefono</string>
    <string name="contraseña">Contraseña</string>
    <string name="verificarcontraseña">Verificar contraseña</string>
    <string name="respuesta_text_view">respuesta</string>
    <string name="respuesta"> Nombre: %s\nCorreo: %s\nTelefono: %s\nContrasena: %s\nVerificarContrasena: %s\nGénero: %s\nCiudad de nacimiento: %s </string>
    <string name="masculino">Masculino</string>
    <string name="femenino">Femenino</string>
    <string name="genero">Género</string>
    <string name="pasatiempo">Pasatiempo</string>
    <string name="nadar">Nadar</string>
    <string name="Caminar">Caminar</string>
    <string name="leer">Leer</string>
    <string name="lugar_nacimiento">Lugar de nacimiento</string>

    <string-array name="ciudad_nacimiento">
        <item>Seleccione una ciudad</item>
        <item>Medellín</item>
        <item>Pitalito</item>
        <item>Bogota</item>
        <item>Cali</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="digite_nombre">Nombre</string>
    <string name="deuda">Valor deuda</string>
    <string name="guardar">Guardar</string>
    <string name="buscar">Buscar</string>
    <string name="ingresar">Ingresar</string>
    <string name="menu">menu</string>
    <string name="campoobligatorio">*Campo obligatorio</string>
    <string name="crear">Crear</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="actualizar">Actualizar</string>
    <string name="menu_borrar">Borrar</string>
    <string name="borrar">Borrar</string>
    <string name="title_activity_bottom">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_tabbedctivity">Tabbedctivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="lista">Lista</string>
    <string name="salir">Salir</string>
</resources>