<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

    <item
        android:id="@+id/nav_lista"
        android:icon="@drawable/ic_baseline_format_list_bulleted_24"
        android:title="@string/lista" />
    <item
        android:id="@+id/nav_crear"
        android:icon="@drawable/ic_menu_add"
        android:title="@string/crear" />
    <item
        android:id="@+id/nav_buscar"
        android:icon="@drawable/ic_menu_buscar"
        android:title="@string/buscar" />

    <item
        android:id="@+id/nav_actualizar"
        android:icon="@drawable/ic_menu_editar"
        android:title="@string/actualizar" />
    <item
        android:id="@+id/nav_borrar"
        android:icon="@drawable/ic_menu_borrar"
        android:title="@string/menu_borrar" />
    </group>
</menu>