<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_lista">

    <fragment
        android:id="@+id/nav_actualizar"
        android:name="com.yennyh.myapplicationtutorial.ui.actualizar.actualizarFragment"
        android:label="@string/actualizar"
        tools:layout="@layout/fragment_actualizar" />
    <fragment
        android:id="@+id/nav_borrar"
        android:name="com.yennyh.myapplicationtutorial.ui.borrar.borrar_Fragment"
        android:label="@string/borrar"
        tools:layout="@layout/fragment_borrar_" />
    <fragment
        android:id="@+id/nav_buscar"
        android:name="com.yennyh.myapplicationtutorial.ui.buscar.BuscarFragment"
        android:label="@string/buscar"
        tools:layout="@layout/fragment_buscar" />
    <fragment
        android:id="@+id/nav_crear"
        android:name="com.yennyh.myapplicationtutorial.ui.crear.CrearFragment"
        android:label="@string/crear"
        tools:layout="@layout/fragment_crear" />
    <fragment
        android:id="@+id/nav_lista"
        android:name="com.yennyh.myapplicationtutorial.ui.lista.ListaFragment"
        android:label="@string/lista"
        tools:layout="@layout/fragment_lista" />
</navigation>